--- a/accounts/templates/account_verification_email.html
+++ b/accounts/templates/account_verification_email.html
@@ -1,10 +1,232 @@
-{% autoescape off %}
+<html>
 
-Hi {{user.full_name}},
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="x-apple-disable-message-reformatting" />
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+  <meta name="color-scheme" content="light dark" />
+  <meta name="supported-color-schemes" content="light dark" />
+  <title></title>
+  <style type="text/css" rel="stylesheet" media="all">
+    body {
+      width: 100% !important;
+      height: 100%;
+      margin: 0;
+      -webkit-text-size-adjust: none;
+    }
 
-Please click on below link to confirm your registration.
-http://{{domain}}{% url 'auth:activate' uidb64=uid token=token %}
+    a {
+      color: #3869d4;
+    }
 
-If you think it's not you, please ignore this email.
+    a img {
+      border: none;
+    }
 
-{% endautoescape %}
+    td {
+      word-break: break-word;
+    }
+
+    h1 {
+      margin-top: 0;
+      color: #333333;
+      font-size: 22px;
+      font-weight: bold;
+      text-align: left;
+    }
+
+    td,
+    th {
+      font-size: 16px;
+    }
+
+    p {
+      margin: 0.4em 0 1.1875em;
+      font-size: 16px;
+      line-height: 1.625;
+    }
+
+    .button {
+      display: inline-block;
+      color: #fff;
+      text-decoration: none;
+      border-radius: 3px;
+      box-shadow: 0 2px 3px rgba(0, 0, 0, 0.16);
+      -webkit-text-size-adjust: none;
+      box-sizing: border-box;
+
+      background-color: #da281c;
+      border-top: 10px solid #da281c;
+      border-right: 18px solid #da281c;
+      border-bottom: 10px solid #da281c;
+      border-left: 18px solid #da281c;
+    }
+
+    p.sub {
+      font-size: 13px;
+    }
+
+    .align-center {
+      text-align: center;
+    }
+
+    .email__container {
+      width: 100%;
+      margin: 0;
+      padding: 0;
+      background-color: #f4f4f7;
+    }
+
+    .email__content {
+      width: 100%;
+      margin: 0;
+      padding: 0;
+    }
+
+    .email__head {
+      padding: 25px 0;
+      text-align: center;
+    }
+
+    .email__head_name img {
+      width: 180px;
+    }
+
+    .email__head_name {
+      font-size: 16px;
+      font-weight: bold;
+      color: #a8aaaf;
+      text-decoration: none;
+      text-shadow: 0 1px 0 white;
+    }
+
+    .email__body {
+      width: 100%;
+      margin: 0;
+      padding: 0;
+      background-color: #ffffff;
+    }
+
+    .email__footer {
+      width: 570px;
+      margin: 0 auto;
+      padding: 0;
+      text-align: center;
+    }
+
+    .email__footer p {
+      color: #6b6e76;
+    }
+
+    .body-action {
+      width: 100%;
+      margin: 30px auto;
+      padding: 0;
+      text-align: center;
+    }
+
+    .body-sub {
+      margin-top: 25px;
+      padding-top: 25px;
+      border-top: 1px solid #eaeaec;
+    }
+
+    .content {
+      padding: 10px;
+    }
+
+    @media only screen and (max-width: 600px) {
+
+      .email__body_inner,
+      .email__footer {
+        width: 100% !important;
+      }
+    }
+
+    @media only screen and (max-width: 500px) {
+      .button {
+        width: 100% !important;
+        text-align: center !important;
+      }
+    }
+  </style>
+</head>
+
+<body>
+  <table class="email__container" width="100%" cellpadding="0" cellspacing="0" role="presentation">
+    <tr>
+      <td align="center">
+        <table class="email__content" width="100%" cellpadding="0" cellspacing="0" role="presentation">
+          <tr>
+            <td class="email__head">
+              <a href="http://{{domain}}" class="email__head_name">
+                <img src="http://{{domain}}/static/assets/images/smart_deals_nepal_logo.png"
+                  style="width: 100px" />
+              </a>
+            </td>
+          </tr>
+          <tr>
+            <td class="email__body" width="100%" cellpadding="0" cellspacing="0">
+              <table class="email__body_inner" align="center" width="570" cellpadding="0" cellspacing="0"
+                role="presentation">
+                <tr>
+                  <td class="content">
+                    <div class="">
+                      <p>Dear {{user.full_name}},</p>
+                      <p>
+                        You (or someone pretending to be you) requested that your account be activated.
+                        If you didn't make this request, then ignore this email; no changes have been made.
+                        If you did make the request, then click here to activate your account.
+                      </p>              
+
+                      <table class="body-action" align="center" width="100%" cellpadding="0" cellspacing="0"
+                        role="presentation">
+                        <tr>
+                          <td align="center">
+                            <a href="http://{{domain}}{% url 'auth:activate' uidb64=uid token=token %}"
+                              class=" button" target="_blank">Activate your account</a>
+                          </td>
+                        </tr>
+                      </table>
+
+                      <table class="body-sub" role="presentation">
+                        <tr>
+                          <td>
+                            <p class=" sub">
+                              If you’re having trouble with the button above,
+                              copy and paste the URL below into your web
+                              browser.
+                            </p>
+                            <a href="http://{{domain}}{% url 'auth:activate' uidb64=uid token=token %}"
+                              class=" sub">http://{{domain}}{% url 'auth:activate' uidb64=uid token=token %}</a>
+                          </td>
+                        </tr>
+                      </table>
+                      <p>Regards, <br />Smart Deals Nepal</p>
+                    </div>
+                  </td>
+                </tr>
+              </table>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <table class="email__footer" align="center" width="570" cellpadding="0" cellspacing="0"
+                role="presentation">
+                <tr>
+                  <td class="content" align="center">
+                    <p class=" sub align-center">
+                      &copy; 2022 Smart Deals Nepal
+                    </p>
+                  </td>
+                </tr>
+              </table>
+            </td>
+          </tr>
+        </table>
+      </td>
+    </tr>
+  </table>
+</body>
+
+</html>
