--- a/store/templates/store/store.html
+++ b/store/templates/store/store.html
@@ -172,7 +172,7 @@
                                     </div><!-- End .product-action -->
 
                                     <div class="product-action">
-                                        <a href="{% url 'cart:add_cart' product.id %}" class="btn-product btn-cart" title="Add to cart"><span>add to cart</span></a>
+                                        <!-- <a href="{% url 'cart:add_cart' product.id %}" class="btn-product btn-cart" title="Add to cart"><span>add to cart</span></a> -->
                                         <!-- <a href="{{product.image.url}}" class="btn-product btn-quickview" title="Quick view"><span>quick view</span></a> -->
                                     </div><!-- End .product-action -->
                                 </figure><!-- End .product-media -->
