--- a/store/templates/store/store.html
+++ b/store/templates/store/store.html
@@ -171,10 +171,10 @@
                                         <a href="#" class="btn-product-icon btn-wishlist" title="Add to wishlist"></a>
                                     </div><!-- End .product-action -->
 
-                                    <div class="product-action">
-                                        <a href="{% url 'cart:add_cart' product.id %}" class="btn-product btn-cart" title="Add to cart"><span>add to cart</span></a>
+                                    {# <div class="product-action"> #}
+                                        {# <a href="{% url 'cart:add_cart' product.id %}" class="btn-product btn-cart" title="Add to cart"><span>add to cart</span></a> #}
                                         <!-- <a href="{{product.image.url}}" class="btn-product btn-quickview" title="Quick view"><span>quick view</span></a> -->
-                                    </div><!-- End .product-action -->
+                                    {# </div><!-- End .product-action --> #}
                                 </figure><!-- End .product-media -->
 
                                 <div class="product-body">
