--- a/store/templates/store/product-detail.html
+++ b/store/templates/store/product-detail.html
@@ -27,111 +27,86 @@
 
                                   
                                 </figure><!-- End .product-main-image -->
-                                <!-- 
-                                        <div id="product-zoom-gallery" class="product-image-gallery">
-                                            <a class="product-gallery-item active" href="#"
-                                                data-image="assets/images/products/single/1.jpg"
-                                                data-zoom-image="assets/images/products/single/1-big.jpg">
-                                                <img src="assets/images/products/single/1-small.jpg" alt="product side">
-                                            </a>
-
-                                            <a class="product-gallery-item" href="#"
-                                                data-image="assets/images/products/single/2.jpg"
-                                                data-zoom-image="assets/images/products/single/2-big.jpg">
-                                                <img src="assets/images/products/single/2-small.jpg"
-                                                    alt="product cross">
-                                            </a>
-
-                                            <a class="product-gallery-item" href="#"
-                                                data-image="assets/images/products/single/3.jpg"
-                                                data-zoom-image="assets/images/products/single/3-big.jpg">
-                                                <img src="assets/images/products/single/3-small.jpg"
-                                                    alt="product with model">
-                                            </a>
-
-                                            <a class="product-gallery-item" href="#"
-                                                data-image="assets/images/products/single/4.jpg"
-                                                data-zoom-image="assets/images/products/single/4-big.jpg">
-                                                <img src="assets/images/products/single/4-small.jpg" alt="product back">
-                                            </a>
-                                        </div> -->
-                                <!-- End .product-image-gallery -->
 
                             </div><!-- End .row -->
                         </div><!-- End .product-gallery -->
                     </div><!-- End .col-md-6 -->
 
                     <div class="col-md-6">
-                        <div class="product-details">
-                            <h1 class="product-title">{{single_product.name}}</h1>
-                            <!-- End .product-title -->
+                        <form action="{% url 'cart:add_cart' single_product.id %}" method="post"> 
+                            {% csrf_token %}
+                            <div class="product-details">
+                                <h1 class="product-title">{{single_product.name}}</h1>
+                                <!-- End .product-title -->
 
-                            <div class="ratings-container">
-                                <div class="ratings">
-                                    <div class="ratings-val" style="width: 80%;"></div><!-- End .ratings-val -->
-                                </div><!-- End .ratings -->
-                                <a class="ratings-text" href="#product-review-link" id="review-link">( 2 Reviews
-                                    )</a>
-                            </div><!-- End .rating-container -->
+                                <div class="ratings-container">
+                                    <div class="ratings">
+                                        <div class="ratings-val" style="width: 80%;"></div><!-- End .ratings-val -->
+                                    </div><!-- End .ratings -->
+                                    <a class="ratings-text" href="#product-review-link" id="review-link">( 2 Reviews
+                                        )</a>
+                                </div><!-- End .rating-container -->
 
-                            <div class="product-price">
-                                {{single_product.price}}
-                            </div><!-- End .product-price -->
-                            
-                                <div class="row" style="margin-left: 4px;">
-                                    <div class="item-option-select">
-                                        <h6>Choose Color</h6>
-                                        <select name="color" class="form-control" required>
-                                        <option value="" disabled selected> Choose Color</option>
-                                        {% for i in single_product.variation_set.colors %}
-                                        <option value="{{i.variation_value | lower}}">{{i.variation_value | capfirst }}</option>
-                                        {% endfor %}
-                                        </select>
-                                    </div>
-                    
-                                    <div class="item-option-select" style="margin-left: 60px;">
-                                    <h6>Select Size</h6>
-                                    <select name="size" class="form-control">
-                                        <option value="" disabled selected> Choose Size</option>
-                                        {% for i in single_product.variation_set.sizes %}
-                                        <option value="{{i.variation_value | lower }}">{{i.variation_value | capfirst }}</option>
-                                        {% endfor %}
-                                    </select>
-                                    </div>
-                                </div> <!-- row.// -->    
-                            
-                            
-                            <div class="product-details-action">
-                                {% if single_product.stock <= 0 %} 
-                                    <span>Out of stock</span>
-                                {% else %}
-                                    {% if in_cart %}
-                                        <a href="#" class="btn-product btn-cart"><span>added to cart</span></a>
-
-                                    {% else %}
-                                        <a href="{% url 'cart:add_cart' single_product.id %}" class="btn-product btn-cart"><span>add to cart</span></a>
-                                    {% endif %}
-                                {% endif %}
-
-                                    <div class="details-action-wrapper">
-                                        <a href="#" class="btn-product btn-wishlist" title="Wishlist"><span>Add
-                                                to
-                                                Wishlist</span></a>
-                                        <a href="#" class="btn-product btn-compare" title="Compare"><span>Add to
-                                                Compare</span></a>
-                                    </div><!-- End .details-action-wrapper -->
-                            </div><!-- End .product-details-action -->
-
-                            <div class="product-details-footer">
-                                <div class="product-cat">
-                                    <span>Category:</span>
-                                    <a href="{% url 'category:products_by_category' single_product.category.slug  %}">{{single_product.category}}</a>,
-                                    
-                                </div><!-- End .product-cat -->
-
+                                <div class="product-price">
+                                    {{single_product.price}}
+                                </div><!-- End .product-price -->
                                 
-                            </div><!-- End .product-details-footer -->
-                        </div><!-- End .product-details -->
+                                    <div class="row" style="margin-left: 4px;">
+                                        <div class="item-option-select">
+                                            <h6>Choose Color</h6>
+                                            <select name="color" class="form-control" required>
+                                            <option value="" disabled selected> Choose Color</option>
+                                            {% for i in single_product.variation_set.colors %}
+                                            <option value="{{i.variation_value | lower}}">{{i.variation_value | capfirst }}</option>
+                                            {% endfor %}
+                                            </select>
+                                        </div>
+                        
+                                        <div class="item-option-select" style="margin-left: 60px;">
+                                        <h6>Select Size</h6>
+                                        <select name="size" class="form-control">
+                                            <option value="" disabled selected> Choose Size</option>
+                                            {% for i in single_product.variation_set.sizes %}
+                                            <option value="{{i.variation_value | lower }}">{{i.variation_value | capfirst }}</option>
+                                            {% endfor %}
+                                        </select>
+                                        </div>
+                                    </div> <!-- row.// -->    
+                                
+                                
+                                <div class="product-details-action">
+                                    {% if single_product.stock <= 0 %} 
+                                        <span>Out of stock</span>
+                                    {% else %}
+                                        {% if in_cart %}
+                                            <a href="#" class="btn-product btn-cart"><span>added to cart</span></a>
+
+                                        {% else %}
+                                            <button type="submit" class="btn-product btn-cart"><span>add to cart</span></button>
+                                            {#<a href="{% url 'cart:add_cart' single_product.id %}" class="btn-product btn-cart"><span>add to cart</span></a>#}
+                                        {% endif %}
+                                    {% endif %}
+
+                                        <div class="details-action-wrapper">
+                                            <a href="#" class="btn-product btn-wishlist" title="Wishlist"><span>Add
+                                                    to
+                                                    Wishlist</span></a>
+                                            <a href="#" class="btn-product btn-compare" title="Compare"><span>Add to
+                                                    Compare</span></a>
+                                        </div><!-- End .details-action-wrapper -->
+                                </div><!-- End .product-details-action -->
+
+                                <div class="product-details-footer">
+                                    <div class="product-cat">
+                                        <span>Category:</span>
+                                        <a href="{% url 'category:products_by_category' single_product.category.slug  %}">{{single_product.category}}</a>,
+                                        
+                                    </div><!-- End .product-cat -->
+
+                                    
+                                </div><!-- End .product-details-footer -->
+                            </div><!-- End .product-details -->
+                        </form><!-- End .form -->
                     </div><!-- End .col-md-6 -->
                 </div><!-- End .row -->
             </div><!-- End .product-details-top -->
