--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
     <meta name="description" content="SmartDealsNepal">
     <meta name="author" content="p-themes">
     <!-- Favicon -->
-    <link rel="shortcut icon" href="{% static 'assets/images/icons/favicon.ico' %}">
+    <link rel="shortcut icon" href="{% static 'assets/images/icons/SDN_logo.jpg' %}">
     <meta name="apple-mobile-web-app-title" content="Molla">
     <meta name="application-name" content="Molla">
     <meta name="msapplication-TileColor" content="#cc9966">
