--- a/store/templates/store/product-detail.html
+++ b/store/templates/store/product-detail.html
@@ -84,7 +84,8 @@
                                         <a href="#" class="btn-product btn-cart"><span>added to cart</span></a>
 
                                     {% else %}
-                                        <button class="btn-product btn-cart" id="btn11"><span>add to cart</span></button>
+                                        <button type="submit" class="btn-product btn-cart"><span>add to cart</span></button>
+                                        <!-- <button class="btn-product btn-cart" id="btn11"><span>add to cart</span></button> -->
                                     {% endif %}
                                 {% endif %}
                             </div><!-- End .product-details-action -->
