username added, css distinguished, commented variation code

--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -272,7 +272,7 @@
         <nav class="main-nav">
           <ul class="menu sf-arrows">
             <li class="megamenu-container active">
-              <a href="#" class="sf-with-ul">Home</a>
+              <a href="" class="">Home</a>
             </li>
           </ul>
           <!-- End .menu -->
