new page added for shop

--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -274,6 +274,9 @@
             <li class="megamenu-container active">
               <a href="" class="">Home</a>
             </li>
+            <li class="megamenu-container">
+              <a href="{% url 'store:all_products' %}" class="">Shop</a>
+            </li>
           </ul>
           <!-- End .menu -->
         </nav>
