some data populate changes

--- a/accounts/templates/dashboard.html
+++ b/accounts/templates/dashboard.html
@@ -22,7 +22,7 @@
       <a class="list-group-item orders" href="#"> My order history </a>
       <a class="list-group-item profile" href="#"> Profile </a>
       <a class="list-group-item" href="#"> Transactions </a>
-      <a class="list-group-item" href="#">Settings </a>
+      {% comment %} <a class="list-group-item" href="#">Settings </a> {% endcomment %}
 
 		</ul>
 		<br>
