--- a/cart/templates/cart/checkout.html
+++ b/cart/templates/cart/checkout.html
@@ -29,17 +29,17 @@
                             <div class="row">
                                 <div class="col-sm-12">
                                     <label>Full Name *</label>
-                                    <input type="text" name="name" class="form-control" required>
+                                    <input type="text" value="{{user_data.user.full_name}}" name="name" class="form-control" required>
                                 </div><!-- End .col-sm-6 -->
                             </div><!-- End .row -->
                             <div class="row">
                                 <div class="col-sm-6">
                                     <label>Email address *</label>
-                                    <input type="email" name="email" class="form-control" required>
+                                    <input type="email" value="{{user_data.user.email}}" name="email" class="form-control" required>
                                 </div>
                                 <div class="col-sm-6">
                                     <label>Phone *</label>
-                                    <input type="tel" name="phone" class="form-control" required>
+                                    <input type="tel" value="{{user_data.user.phone_number}}" name="phone" class="form-control" required>
                                 </div><!-- End .col-sm-6 -->
                             </div><!-- End .row -->
 
