--- a/store/templates/store/all_products.html
+++ b/store/templates/store/all_products.html
@@ -5,7 +5,7 @@
     style="background-image: url('assets/images/page-header-bg.jpg')"
   >
     <div class="container">
-      <h1 class="page-title">Grid 3 Columns<span>Shop</span></h1>
+      <h1 class="page-title">Shop<span></span></h1>
     </div>
     <!-- End .container -->
   </div>
@@ -16,7 +16,7 @@
         <li class="breadcrumb-item"><a href="index.html">Home</a></li>
         <li class="breadcrumb-item"><a href="#">Shop</a></li>
         <li class="breadcrumb-item active" aria-current="page">
-          Grid 3 Columns
+          Shop
         </li>
       </ol>
     </div>
