--- a/templates/base/footer.html
+++ b/templates/base/footer.html
@@ -6,13 +6,13 @@
                 <div class="col-sm-6 col-lg-3">
                     <div class="widget widget-about">
                         <img src="{% static 'assets/images/smart_deals_nepal_logo.png' %}" class="footer-logo" alt="Footer Logo" width="165px" height="75px">
-                        <!-- <h3>Smart Baje</h3> -->
-                        <p>contains description About e-commerce site</p>
+                        <!-- <h3>Smart Online</h3> -->
+                        <p></p>
 
                         <div class="widget-call">
                             <i class="icon-phone"></i>
                             Got Question? Call us 24/7
-                            <a href="#">+977-9849407215</a>         
+                            <a href="#">+977-9868281050</a>         
                         </div><!-- End .widget-call -->
                     </div><!-- End .widget about-widget -->
                 </div><!-- End .col-sm-6 col-lg-3 -->
@@ -66,7 +66,7 @@
 
     <div class="footer-bottom">
         <div class="container">
-            <p class="footer-copyright">Copyright © 2021 Smart Baje. All Rights Reserved.</p><!-- End .footer-copyright -->
+            <p class="footer-copyright">Copyright © 2022 Smart Online. All Rights Reserved. || Mohit Gautam</p><!-- End .footer-copyright -->
             <figure class="footer-payments">
                 <img src="{% static 'assets/images/payments.png' %}" alt="Payment methods" width="272" height="20">
             </figure><!-- End .footer-payments -->
