--- a/store/templates/store/all_products.html
+++ b/store/templates/store/all_products.html
@@ -15,9 +15,7 @@
       <ol class="breadcrumb">
         <li class="breadcrumb-item"><a href="index.html">Home</a></li>
         <li class="breadcrumb-item"><a href="#">Shop</a></li>
-        <li class="breadcrumb-item active" aria-current="page">
-          Shop
-        </li>
+        <li class="breadcrumb-item active" aria-current="page">Shop</li>
       </ol>
     </div>
     <!-- End .container -->
@@ -31,7 +29,8 @@
           <div class="toolbox">
             <div class="toolbox-left">
               <div class="toolbox-info">
-                Showing <span>{{product_count}} of {{product_count}}</span> Products
+                Showing
+                <span>{{product_count}} of {{product_count}}</span> Products
               </div>
               <!-- End .toolbox-info -->
             </div>
@@ -55,7 +54,9 @@
                     </a>
 
                     <div class="product-action">
-                      <a href="{% url 'cart:add_cart' product.id %}" class="btn-product btn-cart"
+                      <a
+                        href="{% url 'cart:add_cart' product.id %}"
+                        class="btn-product btn-cart"
                         ><span>add to cart</span></a
                       >
                     </div>
@@ -85,9 +86,24 @@
             <!-- End .row -->
           </div>
           <!-- End .products -->
-
+          {% if products.has_other_pages %}
           <nav aria-label="Page navigation">
             <ul class="pagination justify-content-center">
+              {% if products.has_previous %}
+              <li class="page-item">
+                <a
+                  class="page-link page-link-prev"
+                  href="?page={{ products.previous_page_number }}"
+                  aria-label="Previous"
+                  tabindex="-1"
+                  aria-disabled="true"
+                >
+                  <span aria-hidden="true"
+                    ><i class="icon-long-arrow-left"></i></span
+                  >Prev
+                </a>
+              </li>
+              {% else %}
               <li class="page-item disabled">
                 <a
                   class="page-link page-link-prev"
@@ -101,22 +117,48 @@
                   >Prev
                 </a>
               </li>
+              {% endif %}
+
+              {% for i in products.paginator.page_range %} 
+              {% if products.number == i %}
               <li class="page-item active" aria-current="page">
-                <a class="page-link" href="#">1</a>
+                <a class="page-link" href="#">{{ i }}</a>
               </li>
-              <li class="page-item"><a class="page-link" href="#">2</a></li>
-              <li class="page-item"><a class="page-link" href="#">3</a></li>
-              <li class="page-item-total">of 6</li>
+              {% else %}
               <li class="page-item">
-                <a class="page-link page-link-next" href="#" aria-label="Next">
+                <a class="page-link" href="?page={{ i }}">{{ i }}</a>
+              </li>
+              {% endif %} {% endfor %}
+              {% if users.has_next %}
+              <li class="page-item">
+                <a
+                  class="page-link page-link-next"
+                  href="?page={{ products.next_page_number }}"
+                  aria-label="Next"
+                >
                   Next
                   <span aria-hidden="true"
                     ><i class="icon-long-arrow-right"></i
                   ></span>
                 </a>
               </li>
+              {% else %}
+              <li class="page-item disabled">
+                <a
+                  class="page-link page-link-next"
+                  href="#"
+                  aria-disabled="true"
+                >
+                  Next
+                  <span aria-hidden="true"
+                    ><i class="icon-long-arrow-right"></i
+                  ></span>
+                </a>
+              </li>
+              {% endif %}
             </ul>
           </nav>
+          {% endif %}
         </div>
         <!-- End .col-lg-9 -->
         <aside class="col-lg-3 order-lg-first">
@@ -152,16 +194,19 @@
                           class="custom-control-input filter-category"
                           id="{{category.id}}"
                         />
-                        <label class="custom-control-label" for="{{category.id}}"
+                        <label
+                          class="custom-control-label"
+                          for="{{category.id}}"
                           >{{category.name}}</label
                         >
                       </div>
                       <!-- End .custom-checkbox -->
-                      <span class="item-count">{{category.product_set.count}}</span>
+                      <span class="item-count"
+                        >{{category.product_set.count}}</span
+                      >
                     </div>
                     <!-- End .filter-item -->
-                {% endfor %}
-                    
+                    {% endfor %}
                   </div>
                   <!-- End .filter-items -->
                 </div>
@@ -215,27 +260,22 @@
   <!-- End .page-content -->
 </main>
 <!-- End .main -->
-{% endblock content%}
-
-{% block javascript %}
+{% endblock content%} {% block javascript %}
 <script>
   $(document).on("click", ".filter-category", function (event) {
-    const csrftoken = getCookie('csrftoken');
+    const csrftoken = getCookie("csrftoken");
     $.ajax({
-      type: 'POST',
+      type: "POST",
       url: "{% url 'store:filter' %}",
-      data:{
-        'csrfmiddlewaretoken': csrftoken,
+      data: {
+        csrfmiddlewaretoken: csrftoken,
         category: $(this).attr("id"),
       },
       success: function (data) {
         $(".col-lg-9").html(data);
       },
     });
-    
-    
   });
-
 </script>
 
 {% endblock javascript %}>
