--- a/store/templates/store/all_products.html
+++ b/store/templates/store/all_products.html
@@ -25,7 +25,7 @@
   <div class="page-content">
     <div class="container">
       <div class="row">
-        <div class="col-lg-9">
+        <div class="col-lg-9 change-price-range">
           <div class="toolbox">
             <div class="toolbox-left">
               <div class="toolbox-info">
@@ -237,7 +237,7 @@
                       <span id="filter-price-range"></span>
                     </div>
                     <!-- End .filter-price-text -->
-
+                    <input type="hidden" class="slider_max_value" value={{slider_max_price}}>
                     <div id="price-slider"></div>
                     <!-- End #price-slider -->
                   </div>
