--- a/templates/base.html
+++ b/templates/base.html
@@ -60,6 +60,8 @@
     <script src="{% static 'assets/js/jquery.plugin.min.js' %} "></script>
     <script src="{% static 'assets/js/jquery.magnific-popup.min.js' %} "></script>
     <script src="{% static 'assets/js/jquery.countdown.min.js' %} "></script>
+    <script src="{% static 'assets/js/wNumb.js' %}"></script>
+    <script src="{% static 'assets/js/nouislider.min.js' %}"></script>
     <!-- Main JS File -->
     <script src="{% static 'assets/js/main.js' %} "></script>
     <script src="{% static 'assets/js/demos/demo-4.js' %} "></script>
